# lsystem

./: .gitignore  README.md  haskellsys.cabal
src/: FractalTree.hs  Main.hs  Pythagoras.hs  PythagorasTree.hs
