name:                haskellsys
version:             0.1.0.0
synopsis:            Simple project on L-systems
description:         Please see README.md
homepage:            https://github.com/edoardo90
license:             BSD3
license-file:        LICENSE
author:              Edoardo Pasi
maintainer:          edoardo.gacc@gmail.com
copyright:           2017 Edoardo Pasi
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskellsys
  hs-source-dirs:      src
  main-is:             FractalTree.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , gloss >= 1.0 && < 5.0
                       , mtl
                       , lens
